[package]
name = "slot-machine"
version = "0.0.1"
authors = ["Concordium <developers@concordium.com>"]
edition = "2018"
license = "MPL-2.0"
description = "Slot machine smart contract."
homepage = "https://github.com/mkmks/concordium-slot-machine"
repository = "https://github.com/mkmks/concordium-slot-machine"
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = ["concordium-std/std"]

[dependencies]
concordium-std = "4.0.0"

[profile.release]
opt-level = 3
